--- a/src/pages/matches/matches.scss
+++ b/src/pages/matches/matches.scss
@@ -1,3 +1,19 @@
 page-matches {
+  p,
+  ion-select,
+  button,
+  fieldset {
+    margin: 10px 0;
+  }
 
+  fieldset {
+    margin-bottom: 25px;
+    padding-top: 0;
+    padding-bottom: 5px;
+    width: 150px;
+  }
+
+  fieldset.bench {
+    border: none;
+  }
 }
