--- a/src/pages/matches/matches.scss
+++ b/src/pages/matches/matches.scss
@@ -6,6 +6,14 @@ page-matches {
         margin: 10px 0;
     }
 
+    ion-item.select-courts {
+        padding-left: 0;
+    }
+
+    button.shuffle {
+        margin-left: 0;
+    }
+
     fieldset {
         height: 160px;
         margin-bottom: 25px;
