--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -71,7 +71,7 @@ $select-md-icon-color: color($colors, primary);
 // The premium icon font for Ionic. For more info, please see:
 // http://ionicframework.com/docs/v2/ionicons/
 
-@import "ionicons";
+@import "ionic.ionicons";
 
 
 // Fonts
