--- a/src/pages/players/players.scss
+++ b/src/pages/players/players.scss
@@ -1,5 +1,7 @@
 page-players {
     .load-from-google {
+        padding-left: 16px;
+
         button {
             vertical-align: middle;
         }
