add icon to remove player from list

--- a/src/pages/players/players.scss
+++ b/src/pages/players/players.scss
@@ -1,4 +1,16 @@
 page-players {
+    .remove-player {
+        position: absolute;
+        right: 5px;
+        padding: 10px;
+        top: 5px;
+
+        &:hover {
+            color: #FF0000;
+            cursor: pointer;
+        }
+    }
+
     .load-from-google {
         padding-left: 16px;
 
