mark players that were on bench already

--- a/src/pages/matches/matches.scss
+++ b/src/pages/matches/matches.scss
@@ -26,6 +26,11 @@ page-matches {
             padding-left: 0;
         }
 
+        .benched {
+            width: 16px;
+            vertical-align: middle;
+        }
+
         ion-list.list {
             margin-bottom: 11px;
 
