--- a/src/pages/matches/matches.scss
+++ b/src/pages/matches/matches.scss
@@ -15,15 +15,19 @@ page-matches {
     }
 
     fieldset {
-        height: 160px;
+        height: 225px;
         margin-bottom: 25px;
         padding-top: 0;
         padding-bottom: 5px;
-        width: 160px;
+        width: 225px;
 
         &.bench {
             border: none;
             padding-left: 0;
+
+            ion-list.list ion-item.item {
+                margin-top: 0;
+            }
         }
 
         .benched {
@@ -35,10 +39,13 @@ page-matches {
             margin-bottom: 11px;
 
             ion-item.item {
+                margin-top: 12px;
                 min-height: unset;
+                padding-left: 0;
 
                 ion-label.label {
                     margin-bottom: 0;
+                    padding-right: 16px;
                 }
             }
         }
