--- a/src/pages/matches/matches.scss
+++ b/src/pages/matches/matches.scss
@@ -43,9 +43,14 @@ page-matches {
                 min-height: unset;
                 padding-left: 0;
 
+                .item-inner {
+                    padding-right: 0;
+                }
+
                 ion-label.label {
                     margin-bottom: 0;
-                    padding-right: 16px;
+                    margin-right: 0;
+                    padding-right: 28px;
                 }
             }
         }
